--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "image-webpack-loader": "^5.0.0",
     "less": "^4.1.1",
     "less-loader": "^5.0.0",
     "node-sass": "^6.0.0",
