--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "qrcodejs2": "0.0.2",
+    "single-spa": "^5.9.3",
     "sortablejs": "^1.14.0",
     "vue": "^2.6.11",
     "vue-count-to": "^1.0.13",
